<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="P0" />
    <string name="app1">SPOTIFY STREAMER</string>
    <string name="app2">SCORES APP</string>
    <string name="app3">LIBRARY APP</string>
    <string name="app4">BUILD IT BIGGER</string>
    <string name="APP5">XYZ READER</string>
    <string name="my_title1">My Nanodegree Apps!</string>
    <string name="apps">CAPSTONE:MY OWN APP</string>
    <string name="sendMessage1">This will open my spotify streamer app</string>
    <string name="sendMessage2">This will open my scores app</string>
    <string name="sendMessage3">This will open my library app</string>
    <string name="sendMessage4">This will launch my build it bigger app</string>
    <string name="sendMessage5">This will launch my xyz reader</string>
    <string name="sendMessage6">This will launch my capstone app</string>
</resources>
