<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.example.pranavjayaraj.myappportfolio.MainActivity"
    android:clickable="true"
    android:contentDescription="@string/app_name"
    android:background="#64646a"
    android:nestedScrollingEnabled="true"
    android:id="@+id/relativelayout">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/my_title1"
        android:id="@+id/textView"
        android:layout_marginTop="34dp"
        android:clickable="false"
        android:textColor="#ffffff"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_alignParentStart="false"
        android:layout_alignParentEnd="false" />

    <Button
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:text="@string/app1"
        android:id="@+id/button"
        android:background="#344098"
        android:linksClickable="false"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/textView"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignRight="@+id/textView"
        android:onClick="onClick"
        android:textColor="#f7cdcd"
        android:textSize="15sp"
        android:nestedScrollingEnabled="true"
        android:gravity="center_vertical|center_horizontal" />

    <Button
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:text="@string/app2"
        android:id="@+id/button3"
        android:background="#344098"
        android:linksClickable="false"
        android:layout_below="@+id/button"
        android:layout_alignLeft="@+id/button"
        android:layout_marginTop="10dp"
        android:layout_alignRight="@+id/button"
        android:onClick="onClick"
        android:textColor="#f7cdcd"
        android:textSize="15sp"
        android:gravity="center_vertical|center_horizontal" />

    <Button
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:text="@string/app3"
        android:id="@+id/button2"
        android:background="#344098"
        android:linksClickable="false"
        android:layout_below="@+id/button3"
        android:layout_alignLeft="@+id/button3"
        android:layout_alignRight="@+id/button3"
        android:layout_marginTop="10dp"
        android:onClick="onClick"
        android:textColor="#f7cdcd"
        android:textSize="15sp"
        android:gravity="center_vertical|center_horizontal" />

    <Button
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:text="@string/app4"
        android:id="@+id/button4"
        android:background="#344098"
        android:linksClickable="false"
        android:layout_below="@+id/button2"
        android:layout_alignLeft="@+id/button2"
        android:layout_alignRight="@+id/button2"
        android:layout_marginTop="10dp"
        android:onClick="onClick"
        android:textColor="#f7cdcd"
        android:textSize="15sp"
        android:gravity="center_vertical|center_horizontal" />

     <Button
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:text="@string/APP5"
        android:id="@+id/button5"
        android:background="#344098"
        android:linksClickable="false"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/button4"
        android:layout_alignLeft="@+id/button4"
        android:layout_alignRight="@+id/button4"
        android:onClick="onClick"
        android:textColor="#f7cdcd"
         android:textSize="15sp"
         android:gravity="center_vertical|center_horizontal" />

    <Button
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:text="@string/apps"
        android:id="@+id/button6"
        android:background="#e00e1f"
        android:linksClickable="false"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/button5"
        android:layout_alignLeft="@+id/button5"
        android:layout_alignRight="@+id/button5"
        android:onClick="onClick"
        android:textSize="15sp"
        android:gravity="center_vertical|center_horizontal"
        android:textColor="#000000" />

</RelativeLayout>
